<?xml version="1.0"?>
<package format="2">
  <name>f110_rrt_star</name>
  <version>0.0.0</version>
  <description>The rrt star package for F110 Autonomous Car developed by Yash Trikannad. Ported to ROS2</description>
  <maintainer email="omadityasiddharth123@gmail.com">Siddharth Saha</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>boost</depend>
  <depend>rclcpp</depend>>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_map_server</depend>
  <depend>ackermann_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
